# xivhub-market-api

./: .gitignore  Cargo.toml  README.md
assets/: items.bin.zstd
migrations/: 20221204084616_initial.sql  20221208170015_indexes.sql  20221209201146_iteminfo.sql  20221211171333_droplistingid.sql  20230107094526_more_indexes.sql  20230124114319_drop_unused_indexes.sql  20230218091330_missing_indexes.sql  20230218113521_better_item_info.sql  20230218120217_rarity.sql  20230422134143_timeindex.sql
src/: entities.rs  error.rs  lib.rs  main.rs  util.rs
src/routes/: item.rs  mod.rs  stats.rs  upload.rs
