[package]
name = "xivhub-market"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.1", features = ["headers"] }
sqlx = { version = "0.6.2", default-features = false, features = ["runtime-tokio-rustls", "postgres", "macros", "chrono", "offline", "migrate", "uuid"] }
moka = { version = "0.9.6", features = ["future"] }
color-eyre = "0.6.2"
headers = "0.3.8"
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
tokio = { version = "1.23.0", features = ["full"] }
validator = { version = "0.16.0", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
dotenvy = "0.15.6"
chrono = { version = "0.4.23", features = ["serde"] }
reqwest = { version = "0.11.13", features = ["json"] }
uuid = { version = "1.2.2", features = ["serde"] }
tower-http = { version = "0.3.5", features = ["full"] }
