[package]
name = "xivhub-market"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1

[dependencies]
axum = { version = "0.6.7", features = ["headers"] }
sqlx = { version = "0.6.2", default-features = false, features = ["runtime-tokio-rustls", "postgres", "macros", "chrono", "offline", "migrate", "uuid"] }
moka = { version = "0.10.0", features = ["future"] }
color-eyre = "0.6.2"
headers = "0.3.8"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["full"] }
validator = { version = "0.16.0", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
dotenvy = "0.15.6"
chrono = { version = "0.4.23", features = ["serde"] }
reqwest = { version = "0.11.14", features = ["json"] }
uuid = { version = "1.3.0", features = ["serde"] }
tower-http = { version = "0.3.5", features = ["full"] }
sha256 = "1.1.2"
axum-prometheus = "0.3.1"
metrics-exporter-prometheus = "0.11.0"
metrics = "0.20.1"
