[package]
name = "xivhub-market"
version = "0.1.0"
edition = "2021"
default-run = "xivhub-market"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.build-override]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1

[dependencies]
axum = { version = "0.6.16", features = ["headers"] }
sqlx = { version = "0.6.3", default-features = false, features = ["runtime-tokio-rustls", "postgres", "macros", "chrono", "offline", "migrate", "uuid"] }
moka = { version = "0.10.2", features = ["future"] }
color-eyre = "0.6.2"
headers = "0.3.8"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.27.0", features = ["full"] }
validator = { version = "0.16.0", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
dotenvy = "0.15.7"
chrono = { version = "0.4.24", features = ["serde"] }
reqwest = { version = "0.11.16", features = ["json"] }
uuid = { version = "1.3.1", features = ["serde"] }
tower-http = { version = "0.4.0", features = ["full"] }
sha256 = "1.1.3"
axum-prometheus = "0.3.2"
metrics-exporter-prometheus = "0.12.0"
metrics = "0.21.0"
ironworks = {version = "0.4.1", features = ["excel", "ffxiv", "sqpack"]}
ironworks_sheets = {git = "https://github.com/ackwell/ironworks", branch = "sheets/saint-coinach"}
bincode = "1.3.3"
zstd = "0.12.3"
smallstr = { version = "0.3.0", features = ["std", "serde"] }
thiserror = "1.0.40"
